Update ru.json up to commit 723caef

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -178,12 +178,13 @@
             "threshold": "Порог"
         },
         "contact": {
-            "rating_short": "Рейт.",
-            "rating": "Рейтинг",
+            "rating_short": "Свя.",
+            "rating": "Связь",
             "loyalty": "Лояльность",
             "loyalty_short": "Лоя.",
             "favors": "Услуги",
             "favors_short": "Усл.",
+            "legwork": "Подготовка",
             "type": "Тип"
         },
         "defense": {
@@ -1566,8 +1567,12 @@
             "earth": "Земли",
             "fire": "Огня",
             "kin": "Предков",
+            "water": "Воды",
             "plant": "Растений",
-            "water": "Воды"
+            "guardian": "Дух-покровитель",
+            "guidance": "Дух-проводник",
+            "task": "Дух-помощник"
+            
         },
         "tradition": {
             "attribute": "Характеристика традиции"
@@ -1680,6 +1685,26 @@
             "wild": "Дикий кубик — 3 успеха!",
             "edge_rerolled": "Переброшен при помощи преимущества.",
             "edge_rolled": "Бросок кубика преимущества."
+        },
+        "legwork": {
+            "legwork_rolltext": "Подготовка // Связь",
+            "loyalty_rolltext": "Подготовка  // Лояльность",
+            "legwork_description": "Как много {name} знает или может разузнать через свою связи?",
+            "loyalty_description": "Сколько {name} готов(а) вам разсказать из того, что знает или может разузнать?",
+            "payformore": "«Знаешь, лишние деньги никогда не помешают. За определённую сумму я могу рассказать больше…»",
+            "results": {
+                "0": "Ничего полезного.",
+                "1": "Основная информацияв широком доступе.",
+                "2": "Некоторые факты, полученные в ходе поверхностного расследования.",
+                "3": "Информация о предыдущей работе или общие профессиональные знания.",
+                "4": "Более высокие познания, слухи.",
+                "5": "Глубокие академические познания, хорошие профессиональные знания, знакомство с действом «за кулисами».",
+                "6": "Знания тайн и скрытой информации.",
+                "7": "Информация высокого уровня, хорошее понимание истории.",
+                "8": "Практически энциклопедические знания, включая некотрые глубоко сокрытые тайны.",
+                "9": "Редкие познания, доступные немногим.",
+                "10": "Глубокие познания, которые другие тщательно скрывают."
+            }
         }
     },
     "skill": {
