Update ru.json up to commit b87f3ea

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1067,6 +1067,8 @@
             "edgegain_player": " (Игрок)",
             "exp": "Мастерство",
             "explode": "Подрываются",
+            "extended": "Продолжительная проверка",
+            "interval": "Интервал",
             "fa_area": "Область",
             "firemode": "Режим стрельбы",
             "failure": "Провал",
@@ -1638,7 +1640,8 @@
                 "reduce_edge_from_actor": "Пожалуйста, уменьшите количество очков преимущества персонажа на {edge}.",
                 "reroll_failed_requires_index": "Чтобы перебросить один или несколько кубиков, перетащите их на кнопку «Потратить».",
                 "edge_boost_cannot_be_used_glitch": "Этот бонус преисущества нельзя использовать, если выпал сбой или критический сбой.",
-                "reopen_dice_tooltip": "Вы переключились между жетонами. Чтобы применить бонус приемущества, снова откройте раздел с кубиками в чате."
+                "reopen_dice_tooltip": "Вы переключились между жетонами. Чтобы применить бонус приемущества, снова откройте раздел с кубиками в чате.",
+                "extended_test_validation": "При проведении продолжительной проверки, Порог и Продолжительность джолжны быть 1 или больше."
             }
         },
         "EFFECT": {
@@ -1683,8 +1686,13 @@
             "hit": "Успех!",
             "failed": "Провал!",
             "wild": "Дикий кубик — 3 успеха!",
+            "wild_ignored": "Успех отменён, поскольку на диком кубике выпало 1.",
             "edge_rerolled": "Переброшен при помощи преимущества.",
-            "edge_rolled": "Бросок кубика преимущества."
+            "edge_rolled": "Бросок кубика преимущества.",
+            "extended_success": "Всего прошло {timePassed} [минут/часов/дней], и задача выполнена успешно.",
+            "extended_failure": "Всего прошло {timePassed} [минут/часов/дней], и задача провалена.",
+            "extended_first_interval": "Первый интервал",
+            "extended_next_interval": "Следующий интервал"
         },
         "legwork": {
             "legwork_rolltext": "Подготовка // Связь",
