Fix Edge Boost +1 to a die incase multiple dice have been selected; Fix Edge Boost UI message;

--- a/lang/en.json
+++ b/lang/en.json
@@ -236,7 +236,7 @@
       "heal_1_physic": "Heal 1 point of Physical damage",
       "heal_1_stun": "Heal one box of Stun damage",
       "negate_1_edge": "Negate 1 Edge of a foe",
-      "plus_1_roll": "+1 to a single die",
+      "plus_1_roll": "+1 to a die",
       "plus_3_ini": "Add 3 to your Initiative Score",
       "reroll_failed": "Reroll all failed dice",
       "reroll_opponent_one": "Reroll opponents die",
@@ -1053,7 +1053,7 @@
         "situational": "Situational Edge",
         "spending": "Spending Edge",
         "spend_edge": "Spend Edge",
-        "edge_spent": "Edge spent: {boostTitle}",
+        "edge_spent": "Edge Boost: {boostTitle}",
         "opponent": "Opponent",
         "opponent_edge_boost": "Opponent Edge Boost",
         "spend": "Spend!",
@@ -1628,8 +1628,8 @@
         "owner_not_logged_in": "Edge Boost is not possible, e.g. due to person who rolled the test not being online.",
         "edge_boost_is_not_post_edge": "'{boostTitle}' is no post roll edge boost",
         "you_require_more_edge": "Not enough Edge available. You require {edge} more to perform this boost.",
-        "no_die_with_a_1_or_4": "Your roll does not have a 1 or 4.",
-        "cant_increase_die": "You can't increase this die.",
+        "no_die_with_a_1_or_4": "Your roll does not have a 1 or 4, so this Edge Boost is not useful.",
+        "cant_increase_die": "You can't increase this die with this Edge Boost, as it would be without use.",
         "all_dice_are_successes": "All dice are already successes.",
         "character_has_spent_edge": "{actor} has spent {edge} edge on the Edge Boost <b>{edgeBoost}</b>.",
         "reduce_edge_from_actor": "Please reduce characters edge by {edge}.",
