--- a/lang/ru.json
+++ b/lang/ru.json
@@ -712,7 +712,7 @@
             },
             "hide": {
                 "name": "Спрятаться",
-                "hint": "Попытаться сбитьцель со своего следа в Матрице. Не сработает, если у аватара есть пользовательский или администраторский доступ к любому устройству в вашей сети."
+                "hint": "Попытаться сбить цель со своего следа в Матрице. Не сработает, если у аватара есть пользовательский или администраторский доступ к любому устройству в вашей сети."
             },
             "jack_out": {
                 "name": "Отключиться",
@@ -724,7 +724,7 @@
             },
             "jump_rigged": {
                 "name": "Подключиться к ригнутому устройству",
-                "hint": "Чтобы захватить управление ТС или дроном, он должен быть оборудован специальным устройством, чтобы его никто не контроллировал, а вам нужно РПУ. Владенение устройством и уровень доступа тоже являются фактором в том, будет ли действие успешным и нужна ли проверка."
+                "hint": "Чтобы захватить управление ТС или дроном, он должен быть оборудован специальным устройством, чтобы его никто не контролировал, а вам нужно РПУ. Владение устройством и уровень доступа тоже являются фактором в том, будет ли действие успешным и нужна ли проверка."
             },
             "known_exploit": {
                 "name": "Войти через известную уязвимости",
@@ -1056,7 +1056,7 @@
                 "situational": "Ситуативное преимущество",
                 "spending": "Трата преимущества",
                 "spend_edge": "Потратить преимущество",
-                "edge_spent": "Потрачено преимущество: {boostTitle}",
+                "edge_spent": "Бонус преимущества: {boostTitle}",
                 "opponent": "Противник",
                 "opponent_edge_boost": "Бонус преимущества противника",
                 "spend": "Потратить!",
@@ -1369,7 +1369,7 @@
             "astral": {
                 "astral_combat": "Астральный бой",
                 "astral_signatures": "Астральный след",
-                "emotional_stress": "Эмоци. состояние",
+                "emotional_stress": "Эмоц. состояние",
                 "spirit_types": "Типы духов"
             },
             "athletics": {
@@ -1627,21 +1627,21 @@
                 "do_not_revert_damage": "Счётчик состояния переполнен. Не отменяйте этот урон при помощи кнопки в чате, он не рассчитается корректно.",
                 "No_actor_or_tokens_selected": "Назначьте себе Персонажа Игрока или выберите токены перед броском.",
                 "You_are_not_owner_of_the_tokens": "Вы не являетесь владельцем выбранных токенов.",
-                "no_weapon_skill_set": "Прежде чем делать броски, добавьте для оружия соответсвующий навык.",
-                "vehicle_has_no_owner": "Vehicle has no owner assigned.",
+                "no_weapon_skill_set": "Прежде чем делать броски, добавьте для оружия соответствующий навык.",
+                "vehicle_has_no_owner": "ТС не назначен владелец.",
                 "only_owner_is_allowed_to_spend_edge": "Только владелец персонажа может тратить очки преимущества для применения этого бонуса.",
                 "owner_not_logged_in": "Нельзя применить бонус преимущества, так как сделавший бросок игрок не в сети.",
                 "edge_boost_is_not_post_edge": "'{boostTitle}' нельзя применять после броска",
                 "you_require_more_edge": "Недостаточно очков преимущества. Для этого бонуса нужно ещё {edge} очков.",
-                "no_die_with_a_4": "В вашем броске не выпоало 1 или 4.",
-                "cant_increase_die": "Значение этого кубика увеличить нельзя.",
+                "no_die_with_a_4": "В вашем броске не выпало 1 или 4, поэтому этот бонус бесполезен.",
+                "cant_increase_die": "Значение этого кубика нельзя увеличить при помоши бонуса, потому что от этого не будет толку.",
                 "all_dice_are_successes": "На всех кубиках и так успехи.",
                 "character_has_spent_edge": "{actor} потратил(а) {edge} очков преимущества на бонус <b>{edgeBoost}</b>.",
                 "reduce_edge_from_actor": "Пожалуйста, уменьшите количество очков преимущества персонажа на {edge}.",
                 "reroll_failed_requires_index": "Чтобы перебросить один или несколько кубиков, перетащите их на кнопку «Потратить».",
-                "edge_boost_cannot_be_used_glitch": "Этот бонус преисущества нельзя использовать, если выпал сбой или критический сбой.",
-                "reopen_dice_tooltip": "Вы переключились между жетонами. Чтобы применить бонус приемущества, снова откройте раздел с кубиками в чате.",
-                "extended_test_validation": "При проведении продолжительной проверки, Порог и Продолжительность джолжны быть 1 или больше."
+                "edge_boost_cannot_be_used_glitch": "Этот бонус преимущества нельзя использовать, если выпал сбой или критический сбой.",
+                "reopen_dice_tooltip": "Вы переключились между жетонами. Чтобы применить бонус преимущества, снова откройте раздел с кубиками в чате.",
+                "extended_test_validation": "При проведении продолжительной проверки, Порог и Продолжительность должны быть 0 или больше."
             }
         },
         "EFFECT": {
@@ -1689,27 +1689,48 @@
             "wild_ignored": "Успех отменён, поскольку на диком кубике выпало 1.",
             "edge_rerolled": "Переброшен при помощи преимущества.",
             "edge_rolled": "Бросок кубика преимущества.",
-            "extended_success": "Всего прошло {timePassed} [минут/часов/дней], и задача выполнена успешно.",
-            "extended_failure": "Всего прошло {timePassed} [минут/часов/дней], и задача провалена.",
+            "extended_success": "Всего прошло {timePassed} {intervalScale}, и задача выполнена успешно.",
+            "extended_failure": "Всего прошло {timePassed} {intervalScale}, и задача провалена.",
             "extended_first_interval": "Первый интервал",
-            "extended_next_interval": "Следующий интервал"
+            "extended_next_interval": "Следующий интервал",
+            "extended": {
+                "continue": "Продолжить продолжительную проверку",
+                "desc": "Всего прошло {timePassed} {intervalScale}, и в общем у тебя {hits} успехов.",
+                "intervalScale": {
+                    "minute_short": "мин.",
+                    "minute_long": "минута",
+                    "minutes_long": "минут",
+                    "hour_short": "ч.",
+                    "hour_long": "час",
+                    "hours_long": "часов",
+                    "day_short": "дн.",
+                    "day_long": "день",
+                    "days_long": "дней",
+                    "week_short": "нед.",
+                    "week_long": "неделя",
+                    "weeks_long": "недель",
+                    "month_short": "мес.",
+                    "month_long": "месяц",
+                    "months_long": "месяцев"
+                }
+            }
         },
         "legwork": {
             "legwork_rolltext": "Подготовка // Связь",
             "loyalty_rolltext": "Подготовка  // Лояльность",
             "legwork_description": "Как много {name} знает или может разузнать через свою связи?",
-            "loyalty_description": "Сколько {name} готов(а) вам разсказать из того, что знает или может разузнать?",
+            "loyalty_description": "Сколько {name} готов(а) вам рассказать из того, что знает или может разузнать?",
             "payformore": "«Знаешь, лишние деньги никогда не помешают. За определённую сумму я могу рассказать больше…»",
             "results": {
                 "0": "Ничего полезного.",
-                "1": "Основная информацияв широком доступе.",
+                "1": "Основная информация в широком доступе.",
                 "2": "Некоторые факты, полученные в ходе поверхностного расследования.",
                 "3": "Информация о предыдущей работе или общие профессиональные знания.",
                 "4": "Более высокие познания, слухи.",
                 "5": "Глубокие академические познания, хорошие профессиональные знания, знакомство с действом «за кулисами».",
                 "6": "Знания тайн и скрытой информации.",
                 "7": "Информация высокого уровня, хорошее понимание истории.",
-                "8": "Практически энциклопедические знания, включая некотрые глубоко сокрытые тайны.",
+                "8": "Практически энциклопедические знания, включая некоторые глубоко сокрытые тайны.",
                 "9": "Редкие познания, доступные немногим.",
                 "10": "Глубокие познания, которые другие тщательно скрывают."
             }
