--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1570,7 +1570,7 @@
       "plant": "Plante",
       "guardian": "Gardien",
       "guidance": "Guide",
-      "task": "Tâche"
+      "task": "Ouvrier"
     },
     "tradition": {
       "attribute": "Attribut de tradition"
