--- a/lang/fr-magicl10n.json
+++ b/lang/fr-magicl10n.json
@@ -1,6 +1,6 @@
 {
   "ITEM.TypeAdeptpower": "Pouvoir adepte",
-  "ITEM.TypeComplexform": "Formulaire complexe",
+  "ITEM.TypeComplexform": "Forme complèxe",
   "ITEM.TypeEcho": "Écho",
   "ITEM.TypeMetamagic": "Métamagique",
   "ITEM.TypeRitual": "Rituel",
@@ -8,31 +8,31 @@
   "shadowrun6.actor.nav.matrix": "Matrice",
   "shadowrun6.complexform.attribute": "Attribut",
   "shadowrun6.complexform.duration": "Durée",
-  "shadowrun6.complexform.fading": "Décoloration",
+  "shadowrun6.complexform.fading": "Technodrain",
   "shadowrun6.complexform.none": "Aucun",
-  "shadowrun6.complexform.oppAttr1": "Attr. 1 opposé",
+  "shadowrun6.complexform.oppAttr1": "Opposition Attr. 1",
   "shadowrun6.complexform.oppAttr2": "Opposition Attr. 2",
   "shadowrun6.complexform.skill": "Compétence",
   "shadowrun6.complexform.threshold": "Seuil",
-  "shadowrun6.defense.drain": "Resist Drain",
-  "shadowrun6.defense.fading": "Résiste à la décoloration",
+  "shadowrun6.defense.drain": "Résist. Drain",
+  "shadowrun6.defense.fading": "Résist. Technodrain",
   "shadowrun6.derived.matrix_perception": "Perception de matrice",
   "shadowrun6.initiative.matrix_ar": "Matrice AR",
-  "shadowrun6.initiative.matrix_cold": "Matrice VR",
-  "shadowrun6.initiative.matrix_hot": "Matrix VR (chaud)",
+  "shadowrun6.initiative.matrix_cold": "Matrice VR (cold-sim",
+  "shadowrun6.initiative.matrix_hot": "Matrix VR (hot-sim)",
   "shadowrun6.item.physical_damage": "P",
-  "shadowrun6.item.stun_damage": "S",
+  "shadowrun6.item.stun_damage": "E",
   "shadowrun6.label.action": "Action",
   "shadowrun6.label.actionduration.minor.short": "Mi",
   "shadowrun6.label.actionduration.major.short": "Ma",
   "shadowrun6.label.attack_rating_short": "AR",
   "shadowrun6.label.attack.short": "A",
-  "shadowrun6.label.sleaze.short": "S",
-  "shadowrun6.label.dataproc.short": "D",
+  "shadowrun6.label.sleaze.short": "C",
+  "shadowrun6.label.dataproc.short": "T",
   "shadowrun6.label.firewall.short": "F",
-  "shadowrun6.label.devicerating.short": "DR.",
+  "shadowrun6.label.devicerating.short": "I",
   "shadowrun6.label.damage_short": "Dmg",
-  "shadowrun6.label.devRating": "Périphérique de l'appareil",
+  "shadowrun6.label.devRating": "Indice de l'appareil",
   "shadowrun6.label.legality.illegal.short": "I",
   "shadowrun6.label.legality.legal.short": "L",
   "shadowrun6.label.name": "Nom",
@@ -70,34 +70,34 @@
   "shadowrun6.matrixaction.tarpit": "Empêtrer",
   "shadowrun6.matrixaction.trace_icon": "Traquer une icône",
   "shadowrun6.mortype.adept": "Adepte",
-  "shadowrun6.mortype.aspectedmagician": "Magicien aspected",
+  "shadowrun6.mortype.aspectedmagician": "Magicien spécialisé",
   "shadowrun6.mortype.magician": "Magicien",
-  "shadowrun6.mortype.mundane": "Mondiale",
+  "shadowrun6.mortype.mundane": "Ordinaire",
   "shadowrun6.mortype.mysticadept": "Adepte mystique",
-  "shadowrun6.mortype.technomancer": "Technomancer",
-  "shadowrun6.newitem.complexform": "À quel point l'aimez-vous ?",
+  "shadowrun6.mortype.technomancer": "Technomancien",
+  "shadowrun6.newitem.complexform": "C'est complexe à quel point ?",
   "shadowrun6.newitem.cyberware": "Un peu d'amélioration de la cybernétique",
   "shadowrun6.newitem.focus": "Quelque chose pour rester concentré",
   "shadowrun6.newitem.matrix": "Regarde mon deck !",
   "shadowrun6.newitem.metamagic": "Qu'as-tu appris ?",
-  "shadowrun6.roll.actionText.thread": "Enfilage {name}",
-  "shadowrun6.section.complexforms.add": "Ajouter un nouveau formulaire complexe",
-  "shadowrun6.section.complexforms.column.duration": "Dur",
-  "shadowrun6.section.complexforms.column.fade": "Fondu",
-  "shadowrun6.section.complexforms.title": "Formulaires complexes",
+  "shadowrun6.roll.actionText.thread": "Exécute {name}",
+  "shadowrun6.section.complexforms.add": "Ajouter une nouvelle forme complèxe",
+  "shadowrun6.section.complexforms.column.duration": "Dur.",
+  "shadowrun6.section.complexforms.column.fade": "Technodrain",
+  "shadowrun6.section.complexforms.title": "Forme complèxe",
   "shadowrun6.section.echo.add": "Ajouter un nouvel écho",
   "shadowrun6.section.echo.title": "Échos",
   "shadowrun6.section.focus.add": "Ajouter un nouveau focus",
-  "shadowrun6.section.focus.column.rating": "Lv",
+  "shadowrun6.section.focus.column.rating": "Ind.",
   "shadowrun6.section.focus.title": "Focus",
-  "shadowrun6.section.matrix_base.overwatch": "Overwatch",
-  "shadowrun6.section.matrix_actions.title": "Actions de matrice",
-  "shadowrun6.section.matrix_combat.title": "Matrixcombat",
-  "shadowrun6.section.matrix_devices.add": "Ajout d'un nouveau périphérique de",
+  "shadowrun6.section.matrix_base.overwatch": "Surveillance",
+  "shadowrun6.section.matrix_actions.title": "Actions matricielle",
+  "shadowrun6.section.matrix_combat.title": "Combat matriciel",
+  "shadowrun6.section.matrix_devices.add": "Ajout d'un nouveau appareil de",
   "shadowrun6.section.matrix_devices.column.action": "Action",
-  "shadowrun6.section.matrix_devices.column.devRating": "Dev.R.",
+  "shadowrun6.section.matrix_devices.column.devRating": "Ind.",
   "shadowrun6.section.matrix_devices.column.name": "Nom",
-  "shadowrun6.section.matrix_devices.title": "Périphériques du",
+  "shadowrun6.section.matrix_devices.title": "Appareil de",
   "shadowrun6.section.persona.distribute": "Distribuer",
   "shadowrun6.section.persona.title": "Persona"
 }
