--- a/lang/fr.json
+++ b/lang/fr.json
@@ -361,8 +361,8 @@
         "PROJECTILES": "Projectiles",
         "RFID": "Marqueurs RFID",
         "#RIFLES": "Fusils",
-        "RIFLE_ASSAULT": "Fusils d'assault",
-        "RIFLE_HUNTING": "Fusils de chasse",
+        "RIFLE_ASSAULT": "Fusil d'assaut",
+        "RIFLE_HUNTING": "Fusil de chasse",
         "RIFLE_SNIPER": "Fusil de précision",
         "RIGGER_CONSOLE": "Consoles de commande pour rigger",
         "ROCKETS": "Roquettes",
