--- a/lang/fr.json
+++ b/lang/fr.json
@@ -320,7 +320,7 @@
         "MACHINE_GUNS": "Mitrailleuses",
         "MACHINE_PISTOLS": "Pistolets automatiques",
         "MAGICAL_FORMULA": "Formule magique",
-        "MAGICAL_SUPPLIES": "Équipements magiques",
+        "MAGIC_SUPPLIES": "Articles magiques",
         "MICRODONES": "Microdrones",
         "MINIDRONES": "Minidrones",
         "MEDIUM_DRONES": "Drones de taille moyenne",
@@ -496,7 +496,7 @@
       "ACCESSORY": "Accessoire",
       "AMMUNITION": "Munitions",
       "ARMOR": "Armure",
-      "ARMOR_ADDITION": "Ajouts d'armure",
+      "ARMOR_ADDITION": "Mods d'armure",
       "BIOLOGY": "Biologie",
       "BIOWARE": "Bioware",
       "CHEMICALS": "Chimique",
