--- a/lang/fr.json
+++ b/lang/fr.json
@@ -497,7 +497,7 @@
       "AMMUNITION": "Munitions",
       "ARMOR": "Armure",
       "ARMOR_ADDITION": "Mods d'armure",
-      "BIOLOGY": "Biologie",
+      "BIOLOGY": "Biotech",
       "BIOWARE": "Bioware",
       "CHEMICALS": "Chimique",
       "CYBERWARE": "Cyberware",
